examples/bad/reflect_nested_result_field.mko
// EXPECT: reflect_value_of expects a POD struct
// Nested struct with Result field is non-POD for reflect_value_of.
struct Inner {
    r: Result[int, string]
}

struct Outer {
    i: Inner
    n: int
}

fn main() {
    let inn = Inner { r: Ok(1) }
    let o = Outer { i: inn, n: 1 }
    let _ = reflect_value_of(o)
}
